--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>DIY Art Suggestions</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>DIY Art Website</title>
 </head>
 <body>
     <header>
-        <h1>DIY Art Suggestions</h1>
+        <h1>DIY Art</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -19,24 +19,34 @@
         </nav>
     </header>
 
-    <section class="content">
-        <div class="filters">
-            <label for="category">Category:</label>
-            <select id="category">
-                <option value="painting">Painting</option>
-                <option value="crafts">Crafts</option>
-                <!-- Add more categories as needed -->
-            </select>
-            <button onclick="applyFilters()">Apply Filters</button>
-        </div>
+    <main>
+        <section class="art-section">
+            <h2>Featured Artwork</h2>
+            <!-- Display featured artwork with images and descriptions -->
+            <div class="artwork">
+                <img src="artwork1.jpg" alt="Artwork 1">
+                <p>Description of Artwork 1</p>
+            </div>
+            <!-- Add more artwork items as needed -->
+        </section>
 
-        <div class="art-gallery">
-            <!-- Images and descriptions will be dynamically loaded here -->
-        </div>
-    </section>
+        <section class="search-section">
+            <h2>Search Artwork</h2>
+            <!-- Add search filters and selection lists here -->
+            <form id="search-form">
+                <label for="category">Select Category:</label>
+                <select id="category" name="category">
+                    <option value="painting">Painting</option>
+                    <option value="sculpture">Sculpture</option>
+                    <!-- Add more options as needed -->
+                </select>
+                <button type="submit">Search</button>
+            </form>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2023 DIY Art Suggestions</p>
+        <p>&copy; 2023 DIY Art. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
